friends of Probabll

--- a/_includes/friend.html
+++ b/_includes/friend.html
@@ -1,7 +1,8 @@
 <div class="media">
-  <p style="font-size: medium; ">
+  <div style="font-size: medium; ">
     <!-- citation -->
     <a href="{{ include.person.url }}">{{ include.person.name }}</a><br/>
     {% if include.person.role %}{{ include.person.role }}{% endif %}
-  </p>
+  </div>
 </div>
+
