--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -52,6 +52,10 @@
     <a href="{{ include.paper.appendix }}" class="label label-info">[appendix]</a>
     {% endif %}
     
+    {% if include.paper.openreview %}
+    <a href="{{ include.paper.openreview }}" class="label label-info">[OpenReview]</a>
+    {% endif %}
+    
     {% if include.paper.data %}
     <a href="{{ include.paper.errata }}" class="label label-info">[errata]</a>
     {% endif %}
