--- a/_includes/reading.html
+++ b/_includes/reading.html
@@ -57,6 +57,10 @@
     <a href="{{ include.paper.demo }}" class="label label-info">[demo]</a>
     {% endif %}
     
+    {% if include.paper.related %}
+    <a href="{{ include.paper.related }}" class="label label-info">[related]</a>
+    {% endif %}
+    
     <br/>
     <br/>
 
