Markdown in remark

--- a/_includes/reading.html
+++ b/_includes/reading.html
@@ -7,7 +7,7 @@
         <font color="darkgray">{{ include.paper.title }}</font><br/>
     {% endif %}
     {% if include.paper.remark %}
-        <i>{{ include.paper.remark }}</i><br/>
+        {{ include.paper.remark | markdownify }}<br/>
     {% endif %}
 
     {% if include.paper.when %}
