--- a/_includes/reading.html
+++ b/_includes/reading.html
@@ -7,7 +7,7 @@
         <font color="darkgray">{{ include.paper.title }}</font><br/>
     {% endif %}
     {% if include.paper.remark %}
-        {{ include.paper.remark | markdownify }}<br/>
+        {{ include.paper.remark | markdownify }}
     {% endif %}
 
     {% if include.paper.when %}
