missing updates for 2025 and some talks

--- a/_includes/paper.html
+++ b/_includes/paper.html
@@ -48,6 +48,10 @@
     <i class="fas fa-star" aria-hidden="true"></i> Spotlight
     {% endif %}
     
+    {% if include.paper.outstanding == 'y' %}
+    <i class="fas fa-star" aria-hidden="true"></i> Outstanding Paper
+    {% endif %}
+    
     <br/>
 
     <!-- resources -->
